styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply mb-6 text-3xl font-semibold;
  }
  h2 {
    @apply text-2xl font-semibold;
  }
  p {
    @apply mb-4;
  }
  a {
    @apply text-blue-500 hover:text-blue-400 dark:text-blue-400 dark:hover:text-blue-300;
  }
}

/* Post styles */
.prose pre {
  @apply bg-gray-50 border border-gray-200 dark:border-gray-700 dark:bg-gray-900;
}

.prose code {
  @apply text-gray-800 dark:text-gray-200 px-1 py-0.5 border border-gray-100 dark:border-gray-800 rounded-md bg-gray-100 dark:bg-gray-900;
}

.prose h2 {
  @apply mt-4;
}

.underline-and-vertical-align {
  text-underline-offset: 6px;
  text-decoration-thickness: 1.5px;
  vertical-align: super;
  transition: text-underline-offset 0.1s ease-in-out;
}

.underline-and-vertical-align:hover {
  text-underline-offset: 8.5px;
}

body,
header,
main {
  transition: background-color 0.4s, color 0.2s, padding 0.5s;
}

header {
  z-index: 1;
}

body {
  overflow-x: hidden;
}

main {
  background-color: transparent;
}

.prose img {
  @apply mb-3 min-w-[220px];
}

@media only screen and (min-width: 750px) {
  .prose img {
    max-width: 80% !important;
    max-height: 80% !important;
  }
}

.prose figure figcaption {
  @apply mt-0 text-center text-gray-600 dark:text-gray-400;
}

/* Prism Styles */
.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  @apply text-gray-700 dark:text-gray-300;
}

.token.punctuation {
  @apply text-gray-700 dark:text-gray-300;
}

.token.property,
.token.tag,
.token.boolean,
.token.number,
.token.constant,
.token.symbol,
.token.deleted {
  @apply text-green-500;
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  @apply text-purple-500;
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string {
  @apply text-yellow-500;
}

.token.atrule,
.token.attr-value,
.token.keyword {
  @apply text-blue-500;
}

.token.function,
.token.class-name {
  @apply text-pink-500;
}

.token.regex,
.token.important,
.token.variable {
  @apply text-yellow-500;
}

code[class*="language-"],
pre[class*="language-"] {
  @apply text-gray-800 dark:text-gray-50;
}

pre::-webkit-scrollbar {
  display: none;
}

pre {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* Remark Styles */
.remark-code-title {
  @apply text-gray-800 dark:text-gray-200 px-5 py-3 border border-b-0 border-gray-200 dark:border-gray-700 rounded-t bg-gray-200 dark:bg-gray-800 text-sm font-mono font-bold;
}

.remark-code-title + pre {
  @apply mt-0 rounded-t-none;
}

.mdx-marker {
  @apply block -mx-4 px-4 bg-gray-100 dark:bg-gray-800 border-l-4 border-blue-500;
}

.prose {
  @apply min-w-full;
}

